--- a/public/services/src/app/views/channel/channelContent/channel.less
+++ b/public/services/src/app/views/channel/channelContent/channel.less
@@ -1,4 +1,6 @@
 .channel-content {
+	display: block;
+	width: 100%;
 	background-color: #fff;
 	margin-bottom: 0.71rem;
 	padding-bottom: 0.71rem;
@@ -60,7 +62,7 @@
 			overflow: hidden;
 			float: left;
 			width: 47%;
-			a {
+			span {
 				position: relative;
 				overflow: hidden;
 				float: left;
@@ -71,7 +73,7 @@
 					width: 100%;
 				}
 			}
-			a:nth-child(1) {
+			span:nth-child(1) {
 				margin-right: 4%;
 			}
 		}
