--- a/public/services/src/app/views/detail/detailContent/detailContent.html
+++ b/public/services/src/app/views/detail/detailContent/detailContent.html
@@ -82,15 +82,10 @@
 </div>
 
 
-<!-- <div class="post-footer clearfix">
-	<div class="footerHelp" data-id="<%= id %>" data-type="<%= type %>">
-		<i class="icon-help"></i>
-		帮P
-	</div>
-	<a href="#upload/reply" class="footerUpload">
-		上传作品
-	</a>
-</div> -->
+<div class="recommend-detail-works">
+	<i class="works-icon"></i>
+	<span>热门作品</span>
+</div>
 
 
 <div class="window-fix hide" id="replyWindow">
