--- a/public/services/src/app/views/original/index/ask-index.less
+++ b/public/services/src/app/views/original/index/ask-index.less
@@ -16,7 +16,7 @@
     opacity: 1;
     border: 0.08rem solid #a9a9a9;
 }
-    .index-ask-pageSection{
+    .hot-pageSection{
         width: 100%;
         background-color: #f7f7f7;
         .workSection{
