--- a/public/services/src/app/views/detail/detailContent/detail-content.less
+++ b/public/services/src/app/views/detail/detailContent/detail-content.less
@@ -1,3 +1,26 @@
+.recommend-detail-works {
+	line-height: 3.21rem;
+	text-align: center;
+	font-size: 1rem;
+	color: #313040;
+	background-color: #f7f7f7;
+	.works-icon {
+		display: inline-block;
+		height: 3.21rem;
+		width: 1.11rem;
+		margin-right: 0.5rem;
+		background: url(/images/hot-work.png) 0 center no-repeat;
+		background-size: contain;
+		vertical-align: top;
+	}
+	span {
+		display: inline-block;
+		vertical-align: top;
+	}
+}
+.recommend-detail {
+	background-color: #f7f7f7;
+}
 .post-workShow{
 	width: 100%;
 	/*border-bottom: 0.36rem solid #F7F7F7;*/
