--- a/public/services/src/app/views/channel/channelDetail/channelDetail.html
+++ b/public/services/src/app/views/channel/channelDetail/channelDetail.html
@@ -5,8 +5,8 @@
 		<a href="#channel/index" class="channel-more">更多频道</a>
 	</div>
 	<div class="channel-banner">
-		<div class="pic-box"><img src="/images/banner.png" alt=""></div>
-		<div class="channel-num clearfix">
+		<div class="pic-box"><img src="<%= app_pic %>" alt=""></div>
+<!-- 		<div class="channel-num clearfix">
 			<div class="works-num">
 				<i class="works-icon"></i>
 				<span>233</span>
@@ -15,7 +15,7 @@
 				<i class="today-icon"></i>
 				<span>66</span>
 			</div>
-		</div>
+		</div> -->
 	</div>
 	<ul class="tap clearfix">
 		<li class="new works-tap activity"  data-type="works">
@@ -29,4 +29,7 @@
 			</div>
 		</li>
 	</ul>
+	<a href="#upload/ask/<%= id %>" class="upload">
+		<img src="/images/upload2.png" alt="">
+	</a>
 </div>
