--- a/public/services/src/app/views/detail/detailContent/detailContent.html
+++ b/public/services/src/app/views/detail/detailContent/detailContent.html
@@ -79,12 +79,15 @@
 		<% } %>
 	</div>
 	<% }) %>
+	<% if(comment_count == 0)  { %>
+		<div class="rob-sofa">暂无评论，快来抢沙发吧～</div>
+	<% } %>
 </div>
 
 
 <div class="recommend-detail-works">
 	<i class="works-icon"></i>
-	<span>热门作品</span>
+	<span>热门推荐</span>
 </div>
 
 
