--- a/public/services/src/app/views/hot/hotChannel/hotChannel.html
+++ b/public/services/src/app/views/hot/hotChannel/hotChannel.html
@@ -1,7 +1,7 @@
 <div class="hot-channel">
 	<div class="channel clearfix">
 		<% _.each(items, function(items) {   %>
-		<a class="channel-list" href="">
+		<a class="channel-list" href="#channel/detail/<%= items.id %>">
 			<dl>
 				<dt>
 					<img src="<%= items.icon %>" alt="">
