--- a/public/services/src/app/views/detail/detailContent/detail-content.less
+++ b/public/services/src/app/views/detail/detailContent/detail-content.less
@@ -23,7 +23,7 @@
 }
 .post-workShow{
 	width: 100%;
-	/*border-bottom: 0.36rem solid #F7F7F7;*/
+	border-bottom: 0.36rem solid #F7F7F7;
 	.sectionHeader{
 		display: block;
 		width: 100%;
