--- a/public/services/css/main.css
+++ b/public/services/css/main.css
@@ -1837,7 +1837,7 @@ body {
 }
 .post-workShow {
   width: 100%;
-  /*border-bottom: 0.36rem solid #F7F7F7;*/
+  border-bottom: 0.36rem solid #F7F7F7;
 }
 .post-workShow .sectionHeader {
   display: block;
@@ -2776,6 +2776,91 @@ body {
   background-size: 100%;
 }
 
+.personal-grid {
+  background-color: #f7f7f7;
+}
+.main-ask-section {
+  width: 47%;
+  margin: 0 1.5% 3%;
+}
+.main-ask-section .ask-section {
+  float: left;
+  width: 100%;
+  background-color: #fff;
+  border-radius: 0.21rem;
+  box-shadow: 3px 3px 5px 2px #d2d2d2;
+}
+.main-ask-section .ask-section .ask-section-main {
+  display: block;
+}
+.main-ask-section .ask-section .ask-section-main .workPic {
+  overflow: hidden;
+  max-height: 30rem;
+  margin-bottom: 0.71rem;
+}
+.main-ask-section .ask-section .ask-section-main .workPic img {
+  display: block;
+  width: 100%;
+}
+.main-ask-section .ask-section .ask-section-main .desc {
+  overflow: hidden;
+  display: block;
+  width: 94%;
+  max-height: 2.6rem;
+  line-height: 1.3rem;
+  padding: 0 3%;
+  font-size: 0.9rem;
+  color: rgba(0, 0, 0, 0.8);
+  border-bottom: 0.12rem dotted rgba(0, 0, 0, 0.49);
+}
+.main-ask-section .ask-section .ask-section-bottom {
+  width: 100%;
+  height: 2.5rem;
+  box-sizing: border-box;
+  padding: 0.64rem 0.64rem 0 0.75rem;
+  border-radius: 0.18rem;
+  line-height: 0.8rem;
+  overflow: hidden;
+}
+.main-ask-section .ask-section .ask-section-bottom .help {
+  float: left;
+}
+.main-ask-section .ask-section .ask-section-bottom .help .icon-help {
+  display: inline-block;
+  margin-right: 0.68rem;
+  vertical-align: middle;
+  width: 0.93rem;
+  height: 0.89rem;
+  background: url(/images/icon-help.png) no-repeat 0 0;
+  background-size: 100%;
+}
+.main-ask-section .ask-section .ask-section-bottom .help .text-help {
+  display: inline-block;
+  vertical-align: middle;
+  font-size: 0.9rem;
+  line-height: 0.89rem;
+  color: rgba(0, 0, 0, 0.49);
+}
+.main-ask-section .ask-section .ask-section-bottom .work {
+  float: right;
+}
+.main-ask-section .ask-section .ask-section-bottom .work .icon-work {
+  display: inline-block;
+  vertical-align: middle;
+  margin-right: 0.68rem;
+  width: 0.93rem;
+  height: 0.89rem;
+  background: url(/images/icon-work.png) no-repeat 0 0;
+  background-size: 100%;
+}
+.main-ask-section .ask-section .ask-section-bottom .work .text-work {
+  display: inline-block;
+  vertical-align: middle;
+  font-size: 0.9rem;
+  line-height: 0.89rem;
+  color: rgba(0, 0, 0, 0.49);
+}
+
 .empty-page {
   padding: 3.64rem 0 2rem;
   background-color: #f7f7f7;
@@ -2886,91 +2971,6 @@ body {
   font-size: 0.86rem;
   color: rgba(0, 0, 0, 0.8);
   border-bottom: 0.21rem solid #f9d161;
-}
-
-.personal-grid {
-  background-color: #f7f7f7;
-}
-.main-ask-section {
-  width: 47%;
-  margin: 0 1.5% 3%;
-}
-.main-ask-section .ask-section {
-  float: left;
-  width: 100%;
-  background-color: #fff;
-  border-radius: 0.21rem;
-  box-shadow: 3px 3px 5px 2px #d2d2d2;
-}
-.main-ask-section .ask-section .ask-section-main {
-  display: block;
-}
-.main-ask-section .ask-section .ask-section-main .workPic {
-  overflow: hidden;
-  max-height: 30rem;
-  margin-bottom: 0.71rem;
-}
-.main-ask-section .ask-section .ask-section-main .workPic img {
-  display: block;
-  width: 100%;
-}
-.main-ask-section .ask-section .ask-section-main .desc {
-  overflow: hidden;
-  display: block;
-  width: 94%;
-  max-height: 2.6rem;
-  line-height: 1.3rem;
-  padding: 0 3%;
-  font-size: 0.9rem;
-  color: rgba(0, 0, 0, 0.8);
-  border-bottom: 0.12rem dotted rgba(0, 0, 0, 0.49);
-}
-.main-ask-section .ask-section .ask-section-bottom {
-  width: 100%;
-  height: 2.5rem;
-  box-sizing: border-box;
-  padding: 0.64rem 0.64rem 0 0.75rem;
-  border-radius: 0.18rem;
-  line-height: 0.8rem;
-  overflow: hidden;
-}
-.main-ask-section .ask-section .ask-section-bottom .help {
-  float: left;
-}
-.main-ask-section .ask-section .ask-section-bottom .help .icon-help {
-  display: inline-block;
-  margin-right: 0.68rem;
-  vertical-align: middle;
-  width: 0.93rem;
-  height: 0.89rem;
-  background: url(/images/icon-help.png) no-repeat 0 0;
-  background-size: 100%;
-}
-.main-ask-section .ask-section .ask-section-bottom .help .text-help {
-  display: inline-block;
-  vertical-align: middle;
-  font-size: 0.9rem;
-  line-height: 0.89rem;
-  color: rgba(0, 0, 0, 0.49);
-}
-.main-ask-section .ask-section .ask-section-bottom .work {
-  float: right;
-}
-.main-ask-section .ask-section .ask-section-bottom .work .icon-work {
-  display: inline-block;
-  vertical-align: middle;
-  margin-right: 0.68rem;
-  width: 0.93rem;
-  height: 0.89rem;
-  background: url(/images/icon-work.png) no-repeat 0 0;
-  background-size: 100%;
-}
-.main-ask-section .ask-section .ask-section-bottom .work .text-work {
-  display: inline-block;
-  vertical-align: middle;
-  font-size: 0.9rem;
-  line-height: 0.89rem;
-  color: rgba(0, 0, 0, 0.49);
 }
 
 .main-processing {
