--- a/public/services/src/app/views/hot/hotWorks/works.less
+++ b/public/services/src/app/views/hot/hotWorks/works.less
@@ -30,7 +30,7 @@
             float: left;
             width: 100%;
             border-radius: 0.29rem;
-            box-shadow: 3px 3px 5px 2px #d2d2d2;
+            box-shadow: 3px 3px 5px 2px #dedede;
             overflow: hidden;
             background-color: #fff;
             .workPic{
