--- a/public/services/src/app/views/personal/works/personal-works.less
+++ b/public/services/src/app/views/personal/works/personal-works.less
@@ -7,7 +7,7 @@
     .workSection{
         display: block;
         width: 100%;
-        box-shadow: 3px 3px 5px 2px #d2d2d2;
+        box-shadow: 3px 3px 5px 2px #dedede;
         .pic-box {
             overflow: hidden;
             width: 100%;
