--- a/public/services/src/app/views/channel/channelContent/channelContent.html
+++ b/public/services/src/app/views/channel/channelContent/channelContent.html
@@ -1,13 +1,13 @@
 <a href="#channel/detail/<%= id %>" class="channel-content">
 	<span class="works-more clearfix">
 		<i class="works-icon"></i>
-		<span><%= replies_count %>作品</span>
+		<span>更多作品</span>
 	</span>
 	<div class="works-detail clearfix">
 		<span>
 			<dl class="channel-detail">
 				<dt>
-					<img src="<%= icon %>" alt="">
+					<img src="http://7u2spr.com1.z0.glb.clouddn.com/20160524-19440457443e84daf3d.jpg" alt="">
 				</dt>
 				<dd>
 					<h2><%= display_name %></h2>
