--- a/public/services/src/app/views/channel/channelDetail/channelDetail.html
+++ b/public/services/src/app/views/channel/channelDetail/channelDetail.html
@@ -1,7 +1,7 @@
 <div class="channel-header">
 	<div class="channel clearfix">
 		<div class="vertical"></div>
-		<h2>恶搞</h2>
+		<h2><%= display_name %></h2>
 		<a href="#channel/index" class="channel-more">更多频道</a>
 	</div>
 	<div class="channel-banner">
