--- a/public/services/src/app/views/channel/channelContent/channelContent.html
+++ b/public/services/src/app/views/channel/channelContent/channelContent.html
@@ -7,7 +7,7 @@
 		<span>
 			<dl class="channel-detail">
 				<dt>
-					<img src="http://7u2spr.com1.z0.glb.clouddn.com/20160524-19440457443e84daf3d.jpg" alt="">
+					<img src="<%= icon %>" alt="">
 				</dt>
 				<dd>
 					<h2><%= display_name %></h2>
