--- a/public/services/src/app/views/activity/activityHeader/activity-header.less
+++ b/public/services/src/app/views/activity/activityHeader/activity-header.less
@@ -60,6 +60,7 @@
 			float: left;
 			width: 50%;
 			text-align: center;
+		    height: 1.7rem;
 			.hot-icon {
 				float: left;
 				width: 0.79rem;
@@ -106,13 +107,11 @@
 		}
 		.hot-tap {
 			display: inline-block;
-			padding-bottom: 0.2rem;
-			border-bottom: 2px solid #fff;
+			padding-bottom: 0.5rem;
 		}
 		.new-tap {
 			display: inline-block;
-			padding-bottom: 0.2rem;
-			border-bottom: 2px solid #fff;
+			padding-bottom: 0.5rem;
 		}
 	}
 	.upload {
