--- a/public/services/src/app/views/detail/detailContent/detail-content.less
+++ b/public/services/src/app/views/detail/detailContent/detail-content.less
@@ -1,4 +1,5 @@
 .recommend-detail-works {
+	margin-top: -0.4rem;
 	line-height: 3.21rem;
 	text-align: center;
 	font-size: 1rem;
@@ -94,24 +95,25 @@
 			/*margin-right: 0.91rem;*/
 			.share{
 				float: left;
-				width: 1.1rem;
-				height: 1.51rem;
-				background: url(/images/ic_share.png) no-repeat 0 center;
-				background-size: 100%;
+			    width: 2rem;
+			    height: 1.51rem;
+			    background: url(/images/ic_share.png) no-repeat 0 center;
+			    background-size: 58%;
 			}
 			.ask-detail {
-				float: left;
+				float: right;
 				margin-left: 1.5rem;
 				font-size: 0.86rem;
 				line-height: 1.51rem;
 				color: #000;
 			}
 			.communicate{
-				float: right;
+				float: left;
 				line-height: 1.51rem;
 				.like-btn{
 					float: left;
 					cursor: pointer;
+					padding: 0 0.6rem;
 					.icon-like-btn{
 						float: left;
 						width: 1.25rem;
@@ -135,9 +137,9 @@
 				.comment-btn{
 					float: left;
 					cursor: pointer;
+					padding: 0 0.6rem;
 					.icon-comment-btn{
 						float: left;
-						margin-left: 1.30rem;
 						width: 1.11rem;
 						height: 1.51rem;
 						background: url(/images/icon-comment-deepCol.png)no-repeat 0 center;
