--- a/public/services/src/app/views/menu/menu.html
+++ b/public/services/src/app/views/menu/menu.html
@@ -3,7 +3,7 @@
 		<img src="/images/logo.png" alt="LOGO">
 	</a>
 	<a href="" class="personalCenter">
-		<img src="/images/personalCenter.png" alt="用户中心">
+		<img src="" alt="用户中心">
 	</a>
 </div>
 <ul class="menu" id="serveceMenu">
