--- a/public/main/res/app/templates/homepage/HomeTask.html
+++ b/public/main/res/app/templates/homepage/HomeTask.html
@@ -1,4 +1,4 @@
-	<div class="home-conduct">
+	<div class="home-conduct" data-id="<%= id %>">
 		<div class="conduct-cantainer clearfix">
 			<div class="conduct-pic">
 				<a target="_blank" href="#askdetail/ask/<%= ask.ask_id %>">
