Fixed bug, old share page css

--- a/public/main/src/less/reply_maxshare.less
+++ b/public/main/src/less/reply_maxshare.less
@@ -127,7 +127,7 @@ body {
         margin-bottom: 14px;
         .header-portrait {
             .min-none {
-                display: none;
+                /*display: none;*/
             }
             display: inline-block;
 
@@ -153,7 +153,7 @@ body {
             .picture {
                 position: relative;
                 .min-none {
-                    display: none;
+                    /*display: none;*/
                 }
             img {
                 width: 100%;
@@ -178,7 +178,7 @@ body {
                         left: 6px;
 
                             .min-none {
-                                display: none;
+                                /*display: none;*/
                             }
                     .bookmark {
                         width: 37px;
@@ -240,7 +240,7 @@ body {
     right: 20px;
     top: 17px;
     .min-none {
-        display: none;
+        /*display: none;*/
     }
                     img {
                         width: 50px;
