--- a/public/main/src/less/share_maxask.less
+++ b/public/main/src/less/share_maxask.less
@@ -188,7 +188,7 @@ body {
   display: inline-block;
 }
 .share-ask-container .header-section .header-portrait .min-none {
-  display: none;
+  /*display: none;*/
 }
 .share-ask-container .header-section .header-portrait img {
   width: 32px;
@@ -208,7 +208,7 @@ body {
   color: #4A4A4A;
 }
 .share-ask-container .picture .min-none {
-  display: none;
+  /*display: none;*/
 }
 .share-ask-container .picture img {
   width: 100%;
