--- a/public/main/css/main.css
+++ b/public/main/css/main.css
@@ -7840,7 +7840,7 @@ body {
   display: inline-block;
 }
 .share-reply-container .header-section .header-portrait .min-none {
-  display: none;
+  /*display: none;*/
 }
 .share-reply-container .header-section .header-portrait img {
   width: 32px;
@@ -7863,7 +7863,7 @@ body {
   position: relative;
 }
 .share-reply-container .picture .min-none {
-  display: none;
+  /*display: none;*/
 }
 .share-reply-container .picture img {
   width: 100%;
@@ -7889,7 +7889,7 @@ body {
   left: 6px;
 }
 .share-reply-container .picture .reply-picture span .min-none {
-  display: none;
+  /*display: none;*/
 }
 .share-reply-container .picture .reply-picture span .bookmark {
   width: 37px;
@@ -7949,7 +7949,7 @@ body {
   top: 17px;
 }
 .share-reply-container .footer-reply .tupai-description .code-picture .min-none {
-  display: none;
+  /*display: none;*/
 }
 .share-reply-container .footer-reply .tupai-description .code-picture img {
   width: 50px;
@@ -9347,9 +9347,6 @@ body {
   flex: 3;
   /* android 4.4 */
 }
-body {
-  padding-bottom: 50%;
-}
 .share-ask-container .ask-content {
   padding: 33px 36px;
 }
@@ -9627,7 +9624,7 @@ body {
   display: inline-block;
 }
 .share-ask-container .header-section .header-portrait .min-none {
-  display: none;
+  /*display: none;*/
 }
 .share-ask-container .header-section .header-portrait img {
   width: 32px;
@@ -9647,7 +9644,7 @@ body {
   color: #4A4A4A;
 }
 .share-ask-container .picture .min-none {
-  display: none;
+  /*display: none;*/
 }
 .share-ask-container .picture img {
   width: 100%;
@@ -9878,12 +9875,6 @@ body {
   /* WP IE 10 */
   flex: 3;
   /* android 4.4 */
-}
-body {
-  padding-bottom: 50%;
-}
-.share-reply-container {
-  margin-bottom: 300px;
 }
 .share-reply-container .reply-content {
   padding: 33px 46px 0 36px;
